# Agentic-Resume-Shortlisting-System

./: .gitignore  HR_RAG_System.ipynb  README.md  pyproject.toml  requirements.txt  template.py
"db:/agentic-hr-a7qydd"  # Replace with your LanceDB URI/job_descriptions.lance/_transactions/: 0-b37ee1f0-b74a-4f02-ae02-dfd180bec35c.txn
.zed/: settings.json
Agentic_HR/: requirements.txt  setup.py
Agentic_HR/agentic_hr.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
Agentic_HR/agentic_hr/graphs/: nodes.py  rag_graph.py
Agentic_HR/agentic_hr/utils/: chunker.py  vector_store.py
Agentic_HR/jazzhr/: client.py  downloader.py
Agentic_HR/jazzhr/examples/: headers.example.json
Agentic_HR/scripts/: jazzhr_fetch_sample.py  run_rag_pipeline.py
Agentic_HR/tests/: test_candidate_ingest.py  test_chunker.py  test_jazzhr.py  test_jd_loader.py  test_nodes.py
docs/: structure.md  uv.md
docs/Resumes/metadata/: resume_11065180.json  resume_12333703.json  resume_17199951.json  resume_17562754.json  resume_19007667.json  resume_30311725.json  resume_45907524.json  resume_62312955.json
leftover/: README.md
notebooks/: Getting_Resumes.ipynb
research/: HR_RAG_System.ipynb
research/Experiments/JazzHR_Testing/: fetch.py  resume_test.py
scripts/: fetch.py  resume_test.py  run_rag_pipeline.py
src/agentic_hr/: __init__.py
src/agentic_hr/components/: candidate_ingest.py  jd_loader.py
src/agentic_hr/graphs/: nodes.py  rag_graph.py  rag_state.py
src/agentic_hr/utils/: chunker.py  doc_reconstruct.py  env.py  reranker.py  vector_store.py
(+105 files in other folders)
