[project]
name = "agentic-hr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
authors = [
  { name = "Ahmad Faisal Mirza", email = "ahmad.faisal@carbonteq.com" }
]
dependencies = [
  "dspy>=3.0.3",
  "google-generativeai>=0.8.5",
  "httpx>=0.28.1",
  "lancedb>=0.25.2",
  "langchain>=1.0.3",
  "langgraph>=1.0.2",
  "numpy>=2.3.4",
  "pandas>=2.3.3",
  "polars>=1.35.1",
  "pyarrow>=22.0.0",
  "pypdf>=6.1.3",
  "python-dotenv>=1.2.1",
]

[project.scripts]

[dependency-groups]
dev = [
  "ipykernel>=7.1.0",
  "ipyparallel>=9.0.2",
  "ipython>=9.6.0",
  "jupyterlab>=4.4.10",
  "pandas-stubs>=2.3.2.250926",
  "pyrefly>=0.39.4",
  "ruff>=0.14.2",
  "ty>=0.0.1a25",
]

[build-system]
requires = ["uv_build>=0.9.6,<0.10.0"]
build-backend = "uv_build"

[tool.pyrefly]
project-includes = ["src", "scripts"]
search-path = ["src"]

[tool.pyright]
pythonVersion = "3.12"
strictListInference = true
venvPath = "./.venv"
reportUnknownParameterType = false
reportImplicitStringConcatenation = false

[tool.ruff]
include = ["src/**/*.py", "scripts/**/*.py"]
src = ["src"]

[tool.ruff.lint]
# for import sorting
extend-select = ["I"]

[tool.ty]
[tool.ty.environment]
python = "./.venv"
python-version = "3.12"

[tool.ty.src]
include = ["src", "scripts"]

[tool.uv]
